<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/emptywood"
        android:orientation="vertical"
        android:padding="@dimen/dim16">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dim4"
            android:text="@string/book_info_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <LinearLayout style="@style/linearLayoutStyle">

            <TextView
                style="@style/textViewInfo"
                android:text="@string/book_name" />

            <EditText
                android:id="@+id/edit_book_name"
                style="@style/textViewInfo2"
                android:hint="@string/name_of_the_book"
                android:inputType="text"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="16sp"
                tools:text="Name" />

        </LinearLayout>

        <LinearLayout style="@style/linearLayoutStyle">

            <TextView
                style="@style/textViewInfo"
                android:text="@string/book_category" />

            <Spinner
                android:id="@+id/spinner_book_category"
                style="@style/textViewInfo3"
                android:layout_height="@dimen/dim40"
                android:hint="@string/category_of_the_book"
                android:inputType="text"
                android:spinnerMode="dropdown"
                tools:text="Category" />

        </LinearLayout>

        <LinearLayout style="@style/linearLayoutStyle">

            <TextView
                style="@style/textViewInfo"
                android:text="@string/price" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/currency_symbol"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/edit_book_price"
                style="@style/textViewInfo4"
                android:gravity="center_horizontal"
                android:hint="@string/price_of_the_book"
                android:inputType="numberDecimal"
                android:textSize="16sp"
                tools:text="Price" />

            <TextView
                android:layout_width="18dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <LinearLayout style="@style/linearLayoutStyle">

            <TextView
                style="@style/textViewInfo"
                android:text="@string/in_stock" />

            <ImageButton
                android:id="@+id/edit_quantity_decrease"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_minus_circle_outline_black_18dp"
                android:contentDescription="@string/minus" />

            <EditText
                android:id="@+id/edit_book_quantity"
                style="@style/textViewInfo4"
                android:gravity="center_horizontal"
                android:textSize="16sp"
                tools:text="22" />

            <ImageButton
                android:id="@+id/edit_quantity_increase"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_plus_circle_outline_black_18dp"
                android:contentDescription="@string/plus" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim2"
            android:background="@color/colorPrimaryDark"
            android:textAppearance="@style/TextAppearance.AppCompat.Menu" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dim1"
            android:text="@string/supplier_info"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/white" />

        <LinearLayout style="@style/linearLayoutStyle">

            <TextView
                style="@style/textViewInfo"
                android:layout_width="24dp"
                android:text="@string/supplier" />

            <EditText
                android:id="@+id/edit_supplier"
                style="@style/textViewInfo3"
                android:layout_width="86dp"
                android:hint="@string/supplier_name"
                android:inputType="text"
                android:textSize="16sp"
                tools:text="Name" />

        </LinearLayout>

        <LinearLayout style="@style/linearLayoutStyle">

            <TextView
                style="@style/textViewInfo"
                android:text="@string/phone" />

            <EditText
                android:id="@+id/edit_phone"
                style="@style/textViewInfo3"
                android:hint="@string/supplier_phone"
                android:inputType="phone"
                android:textSize="16sp"
                tools:text="+1-234-567-890" />

            <ImageButton
                android:id="@+id/phoneButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/ic_phone_in_talk"
                android:contentDescription="@string/btn_phone" />

        </LinearLayout>

        <LinearLayout style="@style/linearLayoutStyle">

            <TextView
                style="@style/textViewInfo"
                android:text="@string/e_mail" />

            <EditText
                android:id="@+id/edit_email"
                style="@style/textViewInfo3"
                android:hint="@string/supplier_email"
                android:inputType="textEmailAddress"
                android:textSize="16sp"
                tools:text="email address" />

            <ImageButton
                android:id="@+id/emailButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/ic_email"
                android:contentDescription="@string/btn_email" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>